# zscore-rust-lib-gen2

./: .env  Cargo.toml  README.md  python_version.py
bindings/: AnalysisCriteria.ts  AssetType.ts  BacktestCriteria.ts  BacktestMetrics.ts  CallItem.ts  Coint.ts  DataCriteria.ts  ExchInt.ts  Exchange.ts  HistoricalPrices.ts  IntervalPeriod.ts  LongSeries.ts  PairAnalysis.ts  PairPrices.ts  QuickStats.ts  QuoteExch.ts  QuotePrice.ts  Relation.ts  Relationship.ts  SpreadType.ts  Statistics.ts  StatsCriteria.ts  StatsOutput.ts  TriggerIndicator.ts  WinRate.ts
src/: lib.rs  prelude.rs
src/backtest/: evaluation.rs  mod.rs  models.rs  utils.rs
src/ml/: models.rs
src/pricing/: candles.rs  controller.rs  entry.rs  mod.rs  models.rs  quotemulti.rs  quotes.rs  symbols.rs  times.rs  utils.rs  volume.rs
src/stats/: mackinnon.rs  metrics.rs  mod.rs  models.rs  regression.rs  statistics.rs
