[package]
name = "zscore_lib"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.0-only"

[lib]
# crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
chrono = "0.4.26"
nalgebra = "0.32.3"
ndarray = "0.15.6"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
ts-rs = "7.0.0"
smartcore = { version = "0.3.2", features = ["datasets", "js"] }
statrs = "0.16.0"
thiserror = "1.0.48"
reqwest = { version = "0.11.18", features = ["json", "wasm-streams"] }
async-std = "1.12.0"
futures = "0.3.28"
wasm-bindgen-futures = "0.4.37"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.32.0", features = ["full"] }
